# bb3d

./: .gitignore  BUILD.bazel  WORKSPACE  example.cpp
bb3d/: assert.cpp  assert.hpp  camera.cpp  camera.hpp  gl_error.cpp  gl_error.hpp  opengl_context.cpp  opengl_context.hpp
bb3d/shader/: colorlines.cpp  colorlines.fs  colorlines.hpp  colorlines.vs  cubemesh.cpp  cubemesh.fs  cubemesh.hpp  cubemesh.vs  freetype.cpp  freetype.fs  freetype.hpp  freetype.vs  gridmesh.cpp  gridmesh.fs  gridmesh.hpp  gridmesh.vs  lines.cpp  lines.fs  lines.hpp  lines.vs  shader.cpp  shader.hpp
